# kwin-effects-yet-another-magic-lamp-reloaded

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: build-opensuse.yml
src/: CMakeLists.txt  Model.cc  Model.h  YetAnotherMagicLampEffect.cc  YetAnotherMagicLampEffect.h  metadata.json
src/kcm/: CMakeLists.txt  YetAnotherMagicLampEffectKCM.cc  YetAnotherMagicLampEffectKCM.h  metadata.json  plugin.cc
